añadido confirmacion atras y recordatorio

--- a/app/src/main/res/layout/activity_add_tarea.xml
+++ b/app/src/main/res/layout/activity_add_tarea.xml
@@ -150,7 +150,7 @@
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" app:srcCompat="@drawable/recargar"
-                        android:id="@+id/ivTiempo" android:layout_weight="0.1"/>
+                        android:id="@+id/btnLimpiarTiempo" android:layout_weight="0.1"/>
             </LinearLayout>
             <LinearLayout
                     android:layout_width="match_parent"
@@ -168,7 +168,7 @@
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" app:srcCompat="@drawable/recargar"
-                        android:id="@+id/ivRecordatorio" android:layout_weight="0.1"/>
+                        android:id="@+id/btnLimpiarRecordatorio" android:layout_weight="0.1"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="horizontal"
@@ -186,7 +186,7 @@
                     <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Días" android:id="@+id/etDias" android:inputType="numberSigned"/>
+                            android:hint="Días" android:id="@+id/etRecDias" android:inputType="numberSigned"/>
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -196,7 +196,7 @@
                     <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Horas" android:id="@+id/etHoras" android:inputType="numberSigned"/>
+                            android:hint="Horas" android:id="@+id/etRecHoras" android:inputType="numberSigned"/>
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -207,7 +207,7 @@
                     <android.support.design.widget.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Minutos" android:id="@+id/etMinutos" android:inputType="numberSigned"/>
+                            android:hint="Minutos" android:id="@+id/etRecMinutos" android:inputType="numberSigned"/>
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
             <!--
