--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/rvTareas"
-                android:clipChildren="true" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
+                android:clipChildren="true"
+                android:layout_marginBottom="55dp"/>
     </LinearLayout>
 
 
@@ -63,7 +64,7 @@
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottomNavigationMenu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_gravity="bottom"
             android:background="?android:attr/windowBackground"
             app:menu="@menu/bottom_navigation_menu"
