--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,7 +8,8 @@
         android:background="@drawable/background_layout" android:elevation="2dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp" android:gravity="right|center_vertical" android:paddingRight="5dp"
-        android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingBottom="5dp">
+        android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingBottom="5dp"
+        android:layout_marginStart="10dp" android:layout_marginEnd="10dp">
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="4dp"
