correccion bug bostrar categorias

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/rvCategorias"
                 android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:layout_marginLeft="10dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp" android:visibility="visible"/>
 
         <android.support.v7.widget.RecyclerView
                 android:clipToPadding="false"
